--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "logging-service": "^1.0.1",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
