--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "devDependencies": {
     "@types/node": "22.0.2",
     "@types/react": "18.3.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "5.5.4"
   }
 }
