--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "js-cookie": "^3.0.5",
     "logging-service": "^1.0.1",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
